# rusty-anime

./: .gitignore  Cargo.toml  README.md  config.yaml  package.json
core/: Cargo.toml
core/src/: api.rs  app.rs  main.rs  menu.rs
player-electron/: main.js  package.json
player-electron/player/: index.html  plyrinit.js
player-tauri/: package.json
player-tauri/src/: index.html  main.js  plyrinit.js  style.css
player-tauri/src-tauri/: Cargo.toml  tauri.conf.json
player-tauri/src-tauri/capabilities/: default.json
player-tauri/src-tauri/src/: lib.rs  main.rs
src/: api.rs  app.rs  main.js  main.rs  menu.rs
src/player/: index.html  player.js  style.css
