[package]
name = "rusty-anime"
version = "0.2.0"
edition = "2021"

[dependencies]
clap = "4.5.20"
console = "0.15.8"
crossterm = "0.27.0"
menu_rs = "0.3.1"
tui = "0.19"
reqwest = {version = "0.12.4", features = ["blocking","json"]}
serde = {version = "1.0.201",features = ["derive"] }
serde_json = {version = "1.0.117",features=["raw_value"]}
serde_yaml = "0.9.34"
